--- a/src/App.css
+++ b/src/App.css
@@ -7,6 +7,26 @@
   pointer-events: none;
 }
 
+.name {
+  font-weight: bold;
+}
+
+.Jumbotron {
+  width: 100%;
+  padding: 50px 20px;
+  background: #eee;
+  background: url('../public/background.jpg');
+  background-size: cover;
+  color: #eee;
+}
+
+.btn {
+  margin-top: 20px;
+  opacity: .9;
+  font-size: 0.8em;
+}
+
+
 @media (prefers-reduced-motion: no-preference) {
   .App-logo {
     animation: App-logo-spin infinite 20s linear;
@@ -32,6 +52,7 @@
   from {
     transform: rotate(0deg);
   }
+
   to {
     transform: rotate(360deg);
   }
